# Emscripten-portfolio

./: .gitignore  CMakeLists.txt  README.md  build_local.sh  vercel.json
.github/workflows/: main.yml
scripts/: build_prod.sh
src/: main.cpp
